syntax = "proto3";

package api.v1;

import "google/protobuf/empty.proto";
import "x/go/telem/telem.proto";

option go_package = "github.com/synnaxlabs/synnax/pkg/api/grpc/v1";

service RangeCreateService {
  rpc Exec(RangeCreateRequest) returns (RangeCreateResponse) {}
}

service RangeRetrieveService {
  rpc Exec(RangeRetrieveRequest) returns (RangeRetrieveResponse) {}
}

service RangeDeleteService {
  rpc Exec(RangeDeleteRequest) returns (google.protobuf.Empty) {}
}

service RangeKVSetService {
  rpc Exec(RangeKVSetRequest) returns (google.protobuf.Empty) {}
}

service RangeKVGetService {
  rpc Exec(RangeKVGetRequest) returns (RangeKVGetResponse) {}
}

service RangeKVDeleteService {
  rpc Exec(RangeKVDeleteRequest) returns (google.protobuf.Empty) {}
}

service RangeAliasSetService {
  rpc Exec(RangeAliasSetRequest) returns (google.protobuf.Empty) {}
}

service RangeAliasResolveService {
  rpc Exec(RangeAliasResolveRequest) returns (RangeAliasResolveResponse) {}
}

service RangeAliasDeleteService {
  rpc Exec(RangeAliasDeleteRequest) returns (google.protobuf.Empty) {}
}

service RangeAliasListService {
  rpc Exec(RangeAliasListRequest) returns (RangeAliasListResponse) {}
}

message RangeAliasSetRequest {
  string range = 1;
  map<uint32, string> aliases = 2;
}

message RangeAliasResolveRequest {
  string range = 1;
  repeated string aliases = 2;
}

message RangeAliasResolveResponse {
  map<string, uint32> aliases = 1;
}

message RangeAliasDeleteRequest {
  string range = 1;
  repeated uint32 channels = 2;
}

message RangeAliasListRequest {
  string range = 1;
}

message RangeAliasListResponse {
  map<uint32, string> aliases = 1;
}

message Range {
  string key = 1;
  telem.PBTimeRange time_range = 2;
  string name = 3;
}

message RangeDeleteRequest {
  repeated string keys = 1;
}

message RangeCreateRequest {
  repeated Range ranges = 1;
}

message RangeCreateResponse {
  repeated Range ranges = 1;
}

message RangeRetrieveRequest {
  repeated string keys = 1;
  repeated string names = 2;
}

message RangeRetrieveResponse {
  repeated Range ranges = 1;
}

message RangeKVSetRequest {
  string range_key = 1;
  repeated KVPair pairs = 2;
}

message KVPair {
  string key = 1;
  string value = 2;
}

message RangeKVGetRequest {
  string range_key = 1;
  repeated string keys = 2;
}

message RangeKVGetResponse {
  repeated KVPair pairs = 1;
}

message RangeKVDeleteRequest {
  string range_key = 1;
  repeated string keys = 2;
}
